--- a/gb/19/7/23/n11403471.md
+++ b/gb/19/7/23/n11403471.md
@@ -1,67 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÎªÑ°ÕÒÊ§×Ù°®È® ÃÀ¹úÄÐ×ÓÐüÉÍ·¿×ÓºÍÍÁµØ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-465820630-600x400.jpg" />
-<h6>ÃÀ¹úÑÇÀûÉ£ÄÇÖÝÄÐ×Ó¿ÂÁÖË¹£¨Eddie Collins£©ÐüÉÍ·¿×ÓºÍÍÁµØ£¬Ï£ÍûÈËÃÇÐ­ÖúËûÑ°ÕÒÊ§×ÙµÄÒ»Ö»¼ªÍÞÍÞ³èÎï¹·¡£Í¼Îª2015Äê3ÔÂ10ÈÕ£¬µÂ¹ú¸¥ÀïµÂÀïÏ£Ë¹¶à·ò£¨Friedrichsdorf£©µÄÒ»Ö»¼ªÍÞÍÞ¹·¡£(FRANK RUMPENHORST/AFP/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/fulfvx3112/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸ºå¯»æ‰¾å¤±è¸ªçˆ±çŠ¬ ç¾Žå›½ç”·å­æ‚¬èµæˆ¿å­å’ŒåœŸåœ°</h2>
+<a href="https://git.io/JteST"><img width="600" src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/djtsp.jpg"title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3>
+<h6>ç¾Žå›½äºšåˆ©æ¡‘é‚£å·žç”·å­æŸ¯æž—æ–¯ï¼ˆEddie Collinsï¼‰æ‚¬èµæˆ¿å­å’ŒåœŸåœ°ï¼Œå¸Œæœ›äººä»¬ååŠ©ä»–å¯»æ‰¾å¤±è¸ªçš„ä¸€åªå‰å¨ƒå¨ƒå® ç‰©ç‹—ã€‚å›¾ä¸º2015å¹´3æœˆ10æ—¥ï¼Œå¾·å›½å¼—é‡Œå¾·é‡Œå¸Œæ–¯å¤šå¤«ï¼ˆFriedrichsdorfï¼‰çš„ä¸€åªå‰å¨ƒå¨ƒç‹—ã€‚(FRANK RUMPENHORST/AFP/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ23ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß³Â¿¡´å±àÒë±¨µ¼£©ÃÀ¹úÑÇÀûÉ£ÄÇÖÝÒ»ÃûÄÐ×ÓµÄ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%88%B1%E7%8A%AC.md">°®È®</a>ÔÚÁ½¸ö¶àÔÂÇ°×ßÊ§£¬¾­¶àÈÕÑ°ÕÒÈÔºÁÎÞÏûÏ¢£¬ÁîËûÉËÐÄ²»ÒÑ¡£Ëû×î½ü¹«¿ª<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%82%AC%E8%B5%8F.md">ÐüÉÍ</a><a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%88%BF%E5%AD%90.md">·¿×Ó</a>ºÍ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md">ÍÁµØ</a>£¬Ï£ÍûÈËÃÇÄÜ°ïÖúËûÕÒµ½Ê§×ÙµÄ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%88%B1%E7%8A%AC.md">°®È®</a>¡£</p>
-<p>Õâ¸öÃû½Ð¿ÂÁÖË¹£¨Eddie Collins£©µÄÄÐ×Ó×¡ÔÚ¸ÃÖÝ³ÇÊÐÍÁÉ££¨Tucson£©¡£ËûµÄ2Ëê¼ªÍÞÍÞ³èÎï¹·¡°ÕäÄÝ¡±£¨Jenny£©ÔÚ4ÔÂÊ§×Ù¡£¾¡¹ÜËûÃ¿ÌìËÄ´¦Ìù¸æÊ¾²¢Ñ°ÕÒËüµÄÏÂÂä£¬ÉõÖÁÌá¹©Ð­Ñ°½±½ð£¬µ«Æù½ñ¶¼Ò»ÎÞËù»ñ¡£</p>
-<p>ÔÚÄÑ¹ýÖ®Óà£¬¿ÂÁÖË¹ÔÚ6ÔÂÏÂÑ®Ìá¸ßÁË±¨³ê£¬Ï£ÍûÄÜÎüÒý¸ÃÊÐµÄ¾ÓÃñ°ïÖúËûÕÒµ½¡°ÕäÄÝ¡±¡£</p>
-<p>Ëû¸æËßµ±µØµçÊÓÌ¨Ëµ£º¡°ÎÒÒ»Ö±ÔÚµ½´¦ÕÒ¡£ÎÒÃ¿Ìì¶¼È¥<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%B0%8F%E7%8B%97.md">Ð¡¹·</a>ÊÕÈÝËùºÍÈËµÀÖ÷ÒåÐ­»á£¨Humane Society£©¡£¡±</p>
-<p>ÏÖÔÚ£¬ËûÌá¹©Ò»¶°ÓÐÒ»¸ö·¿¼äµÄ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%88%BF%E5%AD%90.md">·¿×Ó</a>¡¢Î»ÓÚÁíÒ»¸ö³ÇÊÐ±¾É­£¨Benson£©µÄÒ»Ð¡¿é<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md">ÍÁµØ</a>¡¢ÍÏ³µºÍ¹¤×÷ÊÒ×÷Îª½±ÉÍ£¬Ö»ÇóÄÜÕÒ»Ø¡°ÕäÄÝ¡±¡£</p>
-<p>ÔÚ¹ýÈ¥¼¸¸öÐÇÆÚ£¬¿ÂÁÖË¹Ìá¹©ÓÅä×<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%82%AC%E8%B5%8F.md">ÐüÉÍ</a>µÄÏûÏ¢ÒÑ¾­ÔÚÉç½»Ã½ÌåÉÏÁ÷´«¡£Ö»¼ûËûÊÖ³Ö¡°ÕäÄÝ¡±µÄÍ¼Æ¬ºÍ¹«¸æ£¬Ï£ÍûÄÜÒýÆðÈËÃÇ¹Ø×¢²¢°ïÖúËûÕÒµ½<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%B0%8F%E7%8B%97.md">Ð¡¹·</a>¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ23æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é™ˆä¿Šæ‘ç¼–è¯‘æŠ¥å¯¼ï¼‰ç¾Žå›½äºšåˆ©æ¡‘é‚£å·žä¸€åç”·å­çš„<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E7%88%B1%E7%8A%AC.md#1">çˆ±çŠ¬</a>åœ¨ä¸¤ä¸ªå¤šæœˆå‰èµ°å¤±ï¼Œç»å¤šæ—¥å¯»æ‰¾ä»æ¯«æ— æ¶ˆæ¯ï¼Œä»¤ä»–ä¼¤å¿ƒä¸å·²ã€‚ä»–æœ€è¿‘å…¬å¼€<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%82%AC%E8%B5%8F.md#1">æ‚¬èµ</a><ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%88%BF%E5%AD%90.md#1">æˆ¿å­</a>å’Œ<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">åœŸåœ°</a>ï¼Œå¸Œæœ›äººä»¬èƒ½å¸®åŠ©ä»–æ‰¾åˆ°å¤±è¸ªçš„<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E7%88%B1%E7%8A%AC.md#1">çˆ±çŠ¬</a>ã€‚</p>
+<p>è¿™ä¸ªåå«æŸ¯æž—æ–¯ï¼ˆEddie Collinsï¼‰çš„ç”·å­ä½åœ¨è¯¥å·žåŸŽå¸‚åœŸæ¡‘ï¼ˆTucsonï¼‰ã€‚ä»–çš„2å²å‰å¨ƒå¨ƒå® ç‰©ç‹—â€œçå¦®â€ï¼ˆJennyï¼‰åœ¨4æœˆå¤±è¸ªã€‚å°½ç®¡ä»–æ¯å¤©å››å¤„è´´å‘Šç¤ºå¹¶å¯»æ‰¾å®ƒçš„ä¸‹è½ï¼Œç”šè‡³æä¾›åå¯»å¥–é‡‘ï¼Œä½†è¿„ä»Šéƒ½ä¸€æ— æ‰€èŽ·ã€‚</p>
+<p>åœ¨éš¾è¿‡ä¹‹ä½™ï¼ŒæŸ¯æž—æ–¯åœ¨6æœˆä¸‹æ—¬æé«˜äº†æŠ¥é…¬ï¼Œå¸Œæœ›èƒ½å¸å¼•è¯¥å¸‚çš„å±…æ°‘å¸®åŠ©ä»–æ‰¾åˆ°â€œçå¦®â€ã€‚</p>
+<p>ä»–å‘Šè¯‰å½“åœ°ç”µè§†å°è¯´ï¼šâ€œæˆ‘ä¸€ç›´åœ¨åˆ°å¤„æ‰¾ã€‚æˆ‘æ¯å¤©éƒ½åŽ»<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E5%B0%8F%E7%8B%97.md#1">å°ç‹—</a>æ”¶å®¹æ‰€å’Œäººé“ä¸»ä¹‰åä¼šï¼ˆHumane Societyï¼‰ã€‚â€</p>
+<p>çŽ°åœ¨ï¼Œä»–æä¾›ä¸€æ ‹æœ‰ä¸€ä¸ªæˆ¿é—´çš„<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%88%BF%E5%AD%90.md#1">æˆ¿å­</a>ã€ä½äºŽå¦ä¸€ä¸ªåŸŽå¸‚æœ¬æ£®ï¼ˆBensonï¼‰çš„ä¸€å°å—<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">åœŸåœ°</a>ã€æ‹–è½¦å’Œå·¥ä½œå®¤ä½œä¸ºå¥–èµï¼Œåªæ±‚èƒ½æ‰¾å›žâ€œçå¦®â€ã€‚</p>
+<p>åœ¨è¿‡åŽ»å‡ ä¸ªæ˜ŸæœŸï¼ŒæŸ¯æž—æ–¯æä¾›ä¼˜æ¸¥<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%82%AC%E8%B5%8F.md#1">æ‚¬èµ</a>çš„æ¶ˆæ¯å·²ç»åœ¨ç¤¾äº¤åª’ä½“ä¸Šæµä¼ ã€‚åªè§ä»–æ‰‹æŒâ€œçå¦®â€çš„å›¾ç‰‡å’Œå…¬å‘Šï¼Œå¸Œæœ›èƒ½å¼•èµ·äººä»¬å…³æ³¨å¹¶å¸®åŠ©ä»–æ‰¾åˆ°<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E5%B0%8F%E7%8B%97.md#1">å°ç‹—</a>ã€‚</p>
 </p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">An anguished man offers his house and land as a reward for his lost dog via /r/nottheonion <a href="https://t.co/eEbrqBzftn">https://t.co/eEbrqBzftn</a> <a href="https://t.co/m0Rm7cOVUC">pic.twitter.com/m0Rm7cOVUC</a></p>
-<p>¡ª Lost At Home Podcast (@TheLostAtHome) <a href="https://twitter.com/TheLostAtHome/status/1152093064355356672?ref_src=twsrc%5Etfw">July 19, 2019</a></p></blockquote>
+<p dir="ltr" lang="en">An anguished man offers his house and land as a reward for his lost dog via /r/nottheonion <ahref="https://t.co/eEbrqBzftn">https://t.co/eEbrqBzftn</a> <ahref="https://t.co/m0Rm7cOVUC"></a><img width="600" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitterè§†é¢‘æˆ–å›¾ç‰‡.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a href="m0Rm7cOVUC</a></p>
+<p>â€” Lost At Home Podcast (@TheLostAtHome) <ahref="https://twitter.com/TheLostAtHome/status/1152093064355356672?ref_src=twsrc%5Etfw">July 19, 2019</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>¿ÂÁÖË¹Ëµ£º¡°ÎÞÂÛËüÊÇÊ²Ã´£¨¶¯Îï£©£¬ÎÞÂÛËüÊÇ»¨ÀõÊó»òËÉÊó£¬ÉúÃü¶¼ºÜÖØÒª¡£ÕâÈ¡¾öÓÚÕâ¸öÖ÷ÈË¡¢Õâ¸öÈËºÍËûÃÇµÄËù°®¡£¶ÔÎÒ¶øÑÔ£¬ÕâÓëÎïÖÊµÄ¶«Î÷ÎÞ¹Ø£¬µ«ÓëËüÓÐ¹Ø¡£ËüÊÇÎÒµÄËù°®£¬ËüÊÇÎÒµÄ¼ÒÈË¡£¡±</p>
-<p>¿ÂÁÖË¹Ï£ÍûÕâ¼þÊÂÄÜÒýÆðÈËÃÇ¹Ø×¢£¬×îÖÕÓë¡°ÕäÄÝ¡±ÍÅ¾Û¡£µ«²»ÐÒµÄÊÇ£¬¡°ÕäÄÝ¡±µ½Ä¿Ç°ÎªÖ¹ÈÔÏÂÂä²»Ã÷¡£</p>
-<p><a src="https://www.youtube.com/embed/0dODOzooa40" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/djtsp.jpg" title="¹úÄÚÐèÓÃ·­Ç½Èí¼þ¹Û¿´"  alt="¹úÄÚÐèÓÃ·­Ç½¹Û¿´"><h3 align=center>(ÊÓÆµ.¹úÄÚÐèÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>½øÈëÔ­ÎÄ¹Û¿´)</h3><hr></p>
-<p>ÔðÈÎ±à¼­£ºÜÔÀò</p>
+<p>æŸ¯æž—æ–¯è¯´ï¼šâ€œæ— è®ºå®ƒæ˜¯ä»€ä¹ˆï¼ˆåŠ¨ç‰©ï¼‰ï¼Œæ— è®ºå®ƒæ˜¯èŠ±æ —é¼ æˆ–æ¾é¼ ï¼Œç”Ÿå‘½éƒ½å¾ˆé‡è¦ã€‚è¿™å–å†³äºŽè¿™ä¸ªä¸»äººã€è¿™ä¸ªäººå’Œä»–ä»¬çš„æ‰€çˆ±ã€‚å¯¹æˆ‘è€Œè¨€ï¼Œè¿™ä¸Žç‰©è´¨çš„ä¸œè¥¿æ— å…³ï¼Œä½†ä¸Žå®ƒæœ‰å…³ã€‚å®ƒæ˜¯æˆ‘çš„æ‰€çˆ±ï¼Œå®ƒæ˜¯æˆ‘çš„å®¶äººã€‚â€</p>
+<p>æŸ¯æž—æ–¯å¸Œæœ›è¿™ä»¶äº‹èƒ½å¼•èµ·äººä»¬å…³æ³¨ï¼Œæœ€ç»ˆä¸Žâ€œçå¦®â€å›¢èšã€‚ä½†ä¸å¹¸çš„æ˜¯ï¼Œâ€œçå¦®â€åˆ°ç›®å‰ä¸ºæ­¢ä»ä¸‹è½ä¸æ˜Žã€‚</p>
+<p><a src=""></a><a href="https://git.io/JteST"><img width="600" src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/djtsp.jpg" title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a src="https://www.youtube.com/embed/0dODOzooa40" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>è´£ä»»ç¼–è¾‘ï¼šèŒ‰èŽ‰</p>
+	
+<hr>
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/23/n11403471.htm">ÎªÑ°ÕÒÊ§×Ù°®È® ÃÀ¹úÄÐ×ÓÐüÉÍ·¿×ÓºÍÍÁµØ</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/5/n11366265.htm">ÊÓÆµ£ºÍ¬Ñù¶úÁû ÃÀ¹úÅ®×ÓºÍÐ¡¹·ÒÔÊÖÓï¹µÍ¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/27/n10876245.htm">¶íÄÐåÞ¹·Ã»ÓÃ¹·Éþ Ð¡¹·±»Ç¿·ç´µµ½¼¸¹«ÀïÍâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/19/n10573857.htm">´Ó·É»úÉÏ×¹ÂäÉ³Ä®6Ììºó ÖÇÀûÐ¡¹·Ææ¼£»ñ¾È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/9/27/n9675324.htm">½öÆ¾Ò»ÕÅ³¬¼òÔ¼ÊÖ»æÍ¼ ¾¯·½30·ÖÖÓºóÕÒ»Ø×ßÊ§È®</a></li>
-> <li><a href="https://github.com/cbzs/djy/blob/master/gb/18/7/19/n10573857.md">´Ó·É»úÉÏ×¹ÂäÉ³Ä®6Ììºó ÖÇÀûÐ¡¹·Ææ¼£»ñ¾È</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11401444.htm">¸ÛÈË¿¹ÒéÉý¼¶ Í»Ï®ÖÐÁª°ì Ã¬Í·Ö±Ö¸ÖÐ¹²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11400440.htm">ÄÏ·½ÔâÓöÌØ´óºéÔÖ ÖÐ¹²¸ß²ã²»Â¶Ãæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11400678.htm">·¨ÂÖ¹¦µÝ½»ÆÈº¦ÕßÃûµ¥ ÃÀ¹úÎñÔº½«ÒÀ·¨´¦Àí</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11401500.htm">ÃÀÃ½£ºÎÞÊÓÃÀÖÆ²Ã ´óÁ¿ÒÁÀÊÊ¯ÓÍÈÔÔËÍùÖÐ¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/28/n11352483.htm">Å®×ÓÐÄÔàÍ£Ìø20·ÖÖÓ ÐÑÀ´ËµÌìÌÃ¡°ÊÇÕæµÄ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353775.htm">¡¾¶¨ÊýÆª¡¿°Ë×ÖÏàÍ¬ÕæµÄÃüÔËÒ²ÏàÍ¬Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/26/n11216552.htm">¡¾ÏÍºó´«¡¿½÷ÊØ¸¾µÀ ÎªËÄ³¯´øÀ´°²¶¨µÄ»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11383090.htm">Ò®öÕÎªºÎ²»´ÓÊ®×Ö¼ÜÉÏ×ßÏÂÀ´ Ö¤Ã÷×Ô¼ºÊÇÉñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11401020.htm">µçÓ°¡¶º´ÎÀÕ½Ê¿¡·Ðø¼¯½«ÍÆ³ö Ô¤¸æÆ¬ÇÀÏÈ¿´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11401215.htm">¡¾ÃÀÊ³ÌìÌÃ¡¿¹ãÊ½²æÉÕÈâ Ò»Ñ§¾Í»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/19/n11394657.htm">°ÄÄÐÊÜÀ§´ÔÁÖÓö±©Ñ© ÍçÇ¿Éú´æÊ®ÌìÆæ¼£»ñ¾È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/19/n11396525.htm">Ì¨ÖÐ×îÃÀÅÄÕÕÃØ¾³ ¹¬Æé¿¥Á½²¿¶¯»­Ò»´ÎÈë¾µ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11399992.htm">²úºóÊÝÉíÓÐ¡°×î¼ÑÊ±¼äµã¡±ÖÐÒ½3·½·¨ÎÂºÍË¦Èâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/19/n11396398.htm">¡¾ÐÂÎÅ¿´µã¡¿×¨¼Ò£ºÖÐ¹²Ö÷µ¼¾­¼ÃÓÐÑÏÖØÈ±ÏÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390525.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹²Íâ½»²¿ÈçºÎ±ä³É¡°¶·Õù²¿¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393206.htm">¡¾ÐÂÎÅ¿´µã¡¿¸Û·´ËÍÖÐ¸Ð¶¯¹ú¼Ê ±±¾©Ø¬ÃÎÄÑÈ¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11391199.htm">¡¾Ö±²¥¡¿ÃñÕó7.21ÓÎÐÐ 43ÍòÈË·´ËÍÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11399023.htm">¡¾¸üÐÂÖÐ¡¿43ÍòÈË7¡¤21·´ËÍÖÐ ÖÐ¹²³ö¶¯ºÚÉç»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11399533.htm">×éÍ¼4£º¿ÕÅÄ·´ËÍÖÐ ÈËÉ½ÈËº£¿´²»µ½¾¡Í·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11400422.htm">ÔªÀÊ°×ÒÂÈËÈºÅ¹Ê¾ÍþÊÐÃñ ÖÚ¸ÛÐÇ·×·¢ÉùÇ´Ôð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11398739.htm">ÈÎ´ï»ªÓöÏ®Êõºó·µ¸ÛÖÎÁÆ ½ñÔç½øÐÐ¶þ´ÎÊÖÊõ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/20/n11397148.htm">±»ÎÊÔÚÒôÀÖ½ÚÄ¿ÖÐµ±ÆÀÎ¯ ÁõµÂ»ªÓ¦´ð¾ª´ôÍøÓÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/20/n11397184.htm">Â½×ÛÒÕ½ÚÄ¿±¬ºÚÄ» ½ðÇú¸èºó¼ÍÏþ¾ýÊ×ÂÖÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11401018.htm">ÖØÎÂ¿´Ï·¸Ð¶¯ ÑîÀö»¨¸è×ÐÏ·ÑûÏ·ÃÔ°çÑîÀö»¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/28/n11352483.htm">Å®×ÓÐÄÔàÍ£Ìø20·ÖÖÓ ÐÑÀ´ËµÌìÌÃ¡°ÊÇÕæµÄ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353775.htm">¡¾¶¨ÊýÆª¡¿°Ë×ÖÏàÍ¬ÕæµÄÃüÔËÒ²ÏàÍ¬Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/26/n11216552.htm">¡¾ÏÍºó´«¡¿½÷ÊØ¸¾µÀ ÎªËÄ³¯´øÀ´°²¶¨µÄ»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11383090.htm">Ò®öÕÎªºÎ²»´ÓÊ®×Ö¼ÜÉÏ×ßÏÂÀ´ Ö¤Ã÷×Ô¼ºÊÇÉñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/5/20/n7913261.htm">¡¾ÎÄÊ·¡¿ÖÇÓÂÓÐ´óÂÔ Öìé¦³ÆµÛÌìÃüËù¹é(ÉÏ)</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/17/9/27/n9675324.md#1">ä»…å‡­ä¸€å¼ è¶…ç®€çº¦æ‰‹ç»˜å›¾ è­¦æ–¹30åˆ†é’ŸåŽæ‰¾å›žèµ°å¤±çŠ¬</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/7/19/n10573857.md#1">ä»Žé£žæœºä¸Šå è½æ²™æ¼ 6å¤©åŽ æ™ºåˆ©å°ç‹—å¥‡è¿¹èŽ·æ•‘</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/11/27/n10876245.md#1">ä¿„ç”·é›ç‹—æ²¡ç”¨ç‹—ç»³ å°ç‹—è¢«å¼ºé£Žå¹åˆ°å‡ å…¬é‡Œå¤–</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/7/5/n11366265.md#1">è§†é¢‘ï¼šåŒæ ·è€³è‹ ç¾Žå›½å¥³å­å’Œå°ç‹—ä»¥æ‰‹è¯­æ²Ÿé€š</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/23/n11403471.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">ä¸­å…±æ·«ä¹±çš„å‰ç”Ÿä»Šä¸–ï¼ˆ10ï¼‰æºƒå ¤æ•ˆåº”</a></li><li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">ã€Šæ±‚æ•‘ä¿¡ã€‹æ„ŸåŠ¨æ¬§æ´²è®®ä¼šè§‚ä¼—ï¼šä¼šå“­å¾ˆå¤šæ¬¡</a></li><hr>
+
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1">ã€å‘½ç†ã€‘åº”äº«ç¦æˆ–åº”å—è‹¦ å‘½ä¸­æœ‰å®šæ•°</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/10/3/n12449907.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢12</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12665193.md#1">è¶…é€¼çœŸå†™å®žæ²¹ç”» æç»˜ç”Ÿæ´»ä¸­çš„å°å°çå®</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/27/n12647950.md#1">å¶ç„¶çš„å¤©æ„ï¼Ÿåº·ç†™æ—¶é’±å¸çš„é¢„ç¤º</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667639.md#1">çŒªæœ‰å‰ä¸–è®°å¿†ï¼šæŠ•äººèº«é•¿çŒªè¹„ è½®å›žä¸­è¿˜ä¸š</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680392.md#1">ã€çè¨€çœŸè¯­ã€‘é’Ÿå‰‘åŽï¼šæ»¥æ•åªè®©äººæ›´é„™è§†æ¸¯åºœ</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680880.md#1">ã€çè¨€çœŸè¯­ã€‘ç¨‹ç¿”ï¼šæ¸¯å¤§æŠ“æ•åŠæ”¹åŽ†å² ä¸­å…±ç‰¹è‰²</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678407.md#1">ã€å”é’çœ‹æ—¶äº‹ã€‘å·æ™®é­å›´æ”» è“¬ä½©å¥¥ç—›æ‰“ä¸­å…±</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676021.md#1">ã€æ›´æ–°ã€‘è‹¹æžœè°·æ­Œä¸‹æž¶Parleråº”ç”¨ç¨‹åº</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678054.md#1">â€œæˆ‘ä»¬éƒ½æ˜¯å·æ™®â€ç½‘æ°‘æ¢å¤´åƒæ–¥æŽ¨ç‰¹å°æ€å·æ™®</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678083.md#1">ã€é‡ç£…ã€‘è“¬ä½©å¥¥ï¼šè§£é™¤ç¾Žå°äº¤å¾€é™åˆ¶</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676634.md#1">åˆ˜å˜‰çŽ²è‡ªæ›æœ‰æ´ç™– æ‹æˆæ—¶æ›¾æ¢æŽ‰é…’åº—æˆ¿é—´é©¬æ¡¶</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676343.md#1">èº«å½¢æš´ç˜¦ä¼ æ‚£å¤§ç—… å¼ å®¶è¾‰åœå·¥ä¸€å¹´é¦–éœ²é¢</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679612.md#1">å¥³å„¿æƒ³è¦ä¸ªå¦¹å¦¹ å¼ æ¢“ç³åé—®â€œæ˜¯å¼Ÿå¼Ÿå’‹åŠžâ€</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679436.md#1">å¼ æª¬æ™’ç´ é¢œè¯ä»¶ç…§ å‘Šè¯«åŽæ¥äººä¸è¦æ•´å®¹</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678338.md#1">é»„ç§‹ç”Ÿä¸çˆ±ç«é”… è¯„è®ºâ€œåƒåŽ¨ä½™â€å“åKID</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677405.md#1">æ³¢å…°æˆ¿å±‹èµ·ç« â€œå®ˆæŠ¤å¤©ä½¿â€ç›˜æ—‹ç©ºä¸­</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678623.md#1">è‹±åª’ï¼šè‹±å†›ç‰¹ç§éƒ¨é˜Ÿå—è®­ æŠµæŠ—å¤–æ˜Ÿäººå…¥ä¾µ</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678002.md#1">ç—…æ¯’å¸¦æ¥å¯æ€•ç²¾ç¥žç–¾ç—…ï¼Ÿç²¾ç¥žç§‘åŒ»å¸ˆæž4å¤§åŽŸå› </a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680516.md#1">çŠ¹å¤ªæ‹‰æ¯”ï¼šç§‘æŠ€å·¨å¤´å®¡æŸ¥è¨€è®ºæ˜¯åç¥žçš„æˆ˜äº‰</a></li>
+<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666916.md#1">ã€çº¿ä¸Šæ´»åŠ¨ã€‘ç”·äººå¦‚ä½•å®ˆæŠ¤å‰åˆ—è…ºï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/23/n11403471.htm">ä¸ºå¯»æ‰¾å¤±è¸ªçˆ±çŠ¬ ç¾Žå›½ç”·å­æ‚¬èµæˆ¿å­å’ŒåœŸåœ°</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fulfvx3112/djy/blob/master/gb/19/7/23/n11403471.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
